--- a/Netflix data with beautiful_soup.ipynb
+++ b/Netflix data with beautiful_soup.ipynb
@@ -2,48 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "05802229-723a-44ce-85c7-510709ff80b7",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (2.2.2)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from pandas) (1.26.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Requirement already satisfied: requests in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (2.32.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from requests) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from requests) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from requests) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from requests) (2024.8.30)\n",
-      "Collecting bs4\n",
-      "  Downloading bs4-0.0.2-py2.py3-none-any.whl.metadata (411 bytes)\n",
-      "Requirement already satisfied: beautifulsoup4 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from bs4) (4.12.3)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from beautifulsoup4->bs4) (2.5)\n",
-      "Downloading bs4-0.0.2-py2.py3-none-any.whl (1.2 kB)\n",
-      "Installing collected packages: bs4\n",
-      "Successfully installed bs4-0.0.2\n",
-      "Collecting html5lib\n",
-      "  Downloading html5lib-1.1-py2.py3-none-any.whl.metadata (16 kB)\n",
-      "Requirement already satisfied: six>=1.9 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from html5lib) (1.16.0)\n",
-      "Requirement already satisfied: webencodings in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from html5lib) (0.5.1)\n",
-      "Downloading html5lib-1.1-py2.py3-none-any.whl (112 kB)\n",
-      "Installing collected packages: html5lib\n",
-      "Successfully installed html5lib-1.1\n",
-      "Requirement already satisfied: lxml in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (5.2.1)\n",
-      "Requirement already satisfied: plotly in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (5.24.1)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from plotly) (8.2.3)\n",
-      "Requirement already satisfied: packaging in c:\\users\\mmokw\\anaconda3\\lib\\site-packages (from plotly) (24.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install pandas\n",
     "!pip install requests\n",
@@ -96,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(data, 'html.parser')\n",
+    "Netflix_soup = BeautifulSoup(data, 'html.parser')\n",
     "netflix_data = pd.DataFrame(columns=[\"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Volume\"])"
    ]
   },
@@ -108,7 +72,7 @@
    "outputs": [],
    "source": [
     "# Then we loop through each row and find all the column values for each row\n",
-    "for row in soup.find(\"tbody\").find_all('tr'):\n",
+    "for row in Netflix_soup.find(\"tbody\").find_all('tr'):\n",
     "    col = row.find_all(\"td\")\n",
     "    date = col[0].text\n",
     "    Open = col[1].text\n",
